syntax = "proto3";

option csharp_namespace = "GrpcContracts.Cart";

service CartServiceGrpc {
  rpc AddProduct (AddProductRequest) returns (Cart);
  rpc GetCart (GetCartRequest) returns (Cart);
}

message ProductRequest {
  string id = 1;
  int32 quantity = 2;
}

message Product {
  string id = 1;
  int32 quantity = 2;
  double price = 3;
}

message Cart {
  string userId = 1;
  repeated Product products = 2;
  double totalPrice = 3;
}

message AddProductRequest {
  string userId = 1;
  ProductRequest product = 2;
}

message GetCartRequest {
  string cartId = 1;
}